# Universal_Robots_ROS2_Description

./: .pre-commit-config.yaml  CHANGELOG.rst  CMakeLists.txt  CONTRIBUTING.md  README.md  ci_status.md  package.xml
.github/: mergify.yml
.github/workflows/: binary-build.yml  binary-galactic.yml  binary-humble.yml  binary-iron.yml  binary-rolling.yml  ci-format.yml  ci-ros-lint.yml  humble-binary-main.yml  humble-binary-testing.yml  iron-binary-main.yml  iron-binary-testing.yml  jazzy-binary-main.yml  jazzy-binary-testing.yml  prerelease.yml  reusable_ici.yml  rolling-binary-main.yml  rolling-binary-testing.yml
config/: joint_dynamics.yaml  joint_dynamics_defaults.yaml
config/ur10/: joint_limits.yaml  physical_parameters.yaml
config/ur10e/: joint_limits.yaml  physical_parameters.yaml
config/ur16e/: joint_limits.yaml  physical_parameters.yaml
config/ur20/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
config/ur3/: joint_limits.yaml  physical_parameters.yaml
config/ur30/: default_kinematics.yaml  joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
config/ur3e/: joint_limits.yaml  physical_parameters.yaml
config/ur5/: joint_limits.yaml  physical_parameters.yaml
config/ur5e/: joint_limits.yaml  physical_parameters.yaml  visual_parameters.yaml
doc/: index.rst  multiarm.md  structure.drawio
doc/migration/: jazzy.rst
launch/: view_ur.launch.py
meshes/ur30/: LICENSE.txt
meshes/ur30/visual/: forearm.dae  upperarm.dae
meshes/ur5/collision/: base.stl
meshes/ur5/visual/: base.dae
test/: test_joint_dynamics.yaml  test_ur_urdf_xacro.py  test_view_ur_launch.py
ur_description/: CHANGELOG.rst  README.md
ur_description/doc/: structure.drawio
ur_description/launch/: view_ur.launch.py
ur_description/test/: test_view_ur_launch.py
ur_description/urdf/: ur.urdf.xacro
ur_description/urdf/inc/: ur_common.xacro
ur_ros2_control_support/: CMakeLists.txt  package.xml
ur_ros2_control_support/launch/: view_ur.launch.py
ur_ros2_control_support/urdf/: ur.urdf.xacro  ur_macro.xacro
urdf/: ros2_control_mock_hardware.xacro  ur.ros2_control.xacro  ur.urdf.xacro  ur_macro.xacro  ur_mocked.urdf.xacro  ur_simulation.urdf.xacro  ur_simulation_macro.xacro
urdf/inc/: ur_common.xacro  ur_joint_control.xacro  ur_sensors.xacro
